--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,10 @@ FodyWeavers.xsd
 Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/DesignTimeBuild/.dtbcache.v2
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.AssemblyInfo.cs
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.AssemblyInfoInputs.cache
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.GeneratedMSBuildEditorConfig.editorconfig
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.assets.cache
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.AssemblyInfoInputs.cache
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.AssemblyInfo.cs
+Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/.suo
+Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/FileContentIndex/0dba69c4-00fc-46cc-9e57-23026410334e.vsidx
+Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/DesignTimeBuild/.dtbcache.v2
