--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,4 @@ Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/FileContentIndex/0dba69c4-00fc-4
 Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/DesignTimeBuild/.dtbcache.v2
 
 /Projet_Hotel_CodeBase/.vs
+/Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase
