--- a/.gitignore
+++ b/.gitignore
@@ -411,3 +411,12 @@ Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Projet_Hotel_CodeBase.csproj.nug
 Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/.suo
 Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/DocumentLayout.backup.json
 Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/DocumentLayout.json
+Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/DocumentLayout.json
+Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/DocumentLayout.backup.json
+Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/.suo
+Projet_Hotel_CodeBase/.vs/Projet_Hotel_CodeBase/v17/.futdcache.v2
+Projet_Hotel_CodeBase/.vs/ProjectEvaluation/projet_hotel_codebase.strings.v9.bin
+Projet_Hotel_CodeBase/.vs/ProjectEvaluation/projet_hotel_codebase.projects.v9.bin
+Projet_Hotel_CodeBase/.vs/ProjectEvaluation/projet_hotel_codebase.metadata.v9.bin
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.AssemblyInfo.cs
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/Debug/net8.0/Projet_Hotel_CodeBase.AssemblyInfoInputs.cache
