--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,4 @@ FodyWeavers.xsd
 
 Projet_Hotel_CodeBase/.vs/
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/DatabaseAudit.txt
