--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,4 @@ FodyWeavers.xsd
 Projet_Hotel_CodeBase/.vs/
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/DatabaseAudit.txt
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/Projet_Hotel_CodeBase.csproj.user
