--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,5 @@ Projet_Hotel_CodeBase/.vs/
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/obj/
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/DatabaseAudit.txt
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/Projet_Hotel_CodeBase.csproj.user
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/Database.cs
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/Database.tt
