--- a/.gitignore
+++ b/.gitignore
@@ -404,3 +404,4 @@ Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/DatabaseAudit.txt
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/Projet_Hotel_CodeBase.csproj.user
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/Database.cs
 Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/Database.tt
+Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/EF.Reverse.POCO.v3.ttinclude
