--- a/Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/appsettings.json
+++ b/Projet_Hotel_CodeBase/Projet_Hotel_CodeBase/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "SecretKey": "averylongsecretkeythatisrequiredtobeused"
+  }
 }
